--- a/Project28-SecretSwift/Project28-SecretSwift/Base.lproj/Main.storyboard
+++ b/Project28-SecretSwift/Project28-SecretSwift/Base.lproj/Main.storyboard
@@ -40,6 +40,9 @@
                                 </constraints>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Authenticate"/>
+                                <connections>
+                                    <action selector="didTapAuthenticate:" destination="BYZ-38-t0r" eventType="touchUpInside" id="FhJ-WM-tVb"/>
+                                </connections>
                             </button>
                             <textView hidden="YES" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="UsJ-dc-W0f">
                                 <rect key="frame" x="0.0" y="103" width="393" height="715"/>
