--- a/Project10_collectionview/Project10_collectionview/Base.lproj/Main.storyboard
+++ b/Project10_collectionview/Project10_collectionview/Base.lproj/Main.storyboard
@@ -4,77 +4,9 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Navigation Controller-->
-        <scene sceneID="wUu-uT-DAW">
-            <objects>
-                <navigationController id="cWj-sB-4Xo" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="UBC-EA-yZO">
-                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <connections>
-                        <segue destination="yS1-iJ-kWt" kind="relationship" relationship="rootViewController" id="c84-Ow-0e0"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="StM-UW-Zod" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-825" y="-32"/>
-        </scene>
-        <!--Collection View Controller-->
-        <scene sceneID="J1Y-It-TSe">
-            <objects>
-                <collectionViewController id="yS1-iJ-kWt" sceneMemberID="viewController">
-                    <collectionView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" id="rpe-4e-vOy">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Fzw-nV-Uyv">
-                            <size key="itemSize" width="128" height="128"/>
-                            <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                            <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                            <inset key="sectionInset" minX="10" minY="10" maxX="10" maxY="10"/>
-                        </collectionViewFlowLayout>
-                        <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PersonCollectionViewCell" id="M5H-Yf-he6" customClass="PersonCollectionViewCell" customModule="Project10_collectionview" customModuleProvider="target">
-                                <rect key="frame" x="10" y="10" width="140" height="180"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                    <rect key="frame" x="0.0" y="0.0" width="140" height="180"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zER-aR-ZAS">
-                                            <rect key="frame" x="10" y="10" width="120" height="120"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4Mc-0b-aQM">
-                                            <rect key="frame" x="10" y="134" width="120" height="40"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                            <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="16"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                </view>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <size key="customSize" width="140" height="180"/>
-                            </collectionViewCell>
-                        </cells>
-                        <connections>
-                            <outlet property="dataSource" destination="yS1-iJ-kWt" id="YZP-R3-fEZ"/>
-                            <outlet property="delegate" destination="yS1-iJ-kWt" id="Bhs-ue-sKZ"/>
-                        </connections>
-                    </collectionView>
-                    <navigationItem key="navigationItem" id="PYe-0Q-736"/>
-                </collectionViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="7aT-0v-x1M" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="3.8167938931297707" y="-32.394366197183103"/>
-        </scene>
         <!--Main Collection View Controller-->
         <scene sceneID="BHM-Xu-K26">
             <objects>
@@ -97,20 +29,33 @@
                                     <rect key="frame" x="0.0" y="0.0" width="140" height="180"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sUm-DC-TNH">
-                                            <rect key="frame" x="10" y="10" width="120" height="120"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="sUm-DC-TNH">
+                                            <rect key="frame" x="0.0" y="0.0" width="140" height="140"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="sUm-DC-TNH" secondAttribute="height" id="0to-jy-uTx"/>
+                                            </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YHj-np-Zxt">
-                                            <rect key="frame" x="10" y="134" width="120" height="40"/>
-                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YHj-np-Zxt">
+                                            <rect key="frame" x="4" y="144" width="132" height="32"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="24" id="1sz-0k-tyH"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" name="MarkerFelt-Thin" family="Marker Felt" pointSize="16"/>
-                                            <nil key="textColor"/>
+                                            <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                     </subviews>
                                 </view>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="sUm-DC-TNH" firstAttribute="top" secondItem="ijw-EM-5bG" secondAttribute="top" id="47y-2q-6SJ"/>
+                                    <constraint firstAttribute="trailing" secondItem="YHj-np-Zxt" secondAttribute="trailing" constant="4" id="6F3-Co-AFC"/>
+                                    <constraint firstItem="sUm-DC-TNH" firstAttribute="leading" secondItem="ijw-EM-5bG" secondAttribute="leading" id="HrS-Y4-bZ1"/>
+                                    <constraint firstItem="YHj-np-Zxt" firstAttribute="top" secondItem="sUm-DC-TNH" secondAttribute="bottom" constant="4" id="Jfg-hm-zQK"/>
+                                    <constraint firstAttribute="trailing" secondItem="sUm-DC-TNH" secondAttribute="trailing" id="dgz-6Q-n7l"/>
+                                    <constraint firstItem="YHj-np-Zxt" firstAttribute="leading" secondItem="ijw-EM-5bG" secondAttribute="leading" constant="4" id="hst-dN-nBT"/>
+                                    <constraint firstAttribute="bottom" secondItem="YHj-np-Zxt" secondAttribute="bottom" constant="4" id="vub-WC-ArZ"/>
+                                </constraints>
                                 <connections>
                                     <outlet property="imageView" destination="sUm-DC-TNH" id="roa-7v-dIJ"/>
                                     <outlet property="nameLabel" destination="YHj-np-Zxt" id="bLL-ev-VnT"/>
@@ -147,9 +92,4 @@
             <point key="canvasLocation" x="-935" y="686"/>
         </scene>
     </scenes>
-    <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-    </resources>
 </document>
